--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,4 @@ jobs:
           java-version: '17'
           distribution: 'corretto'
       - name: Build with Maven
-        run: mvn clean verify
+        run: mvn -ntp clean verify
