--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -12,6 +12,13 @@ jobs:
         with:
           java-version: '17'
           distribution: 'corretto'
+          cache: 'maven'
+          server-id: central
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+          gpg-private-key: ${{ secrets.GPG_SECRET_KEY }}
+          gpg-passphrase: MAVEN_GPG_PASSPHRASE
+
       - name: Publish snapshot
         run: mvn -ntp clean deploy -Prelease
         env:
