--- a/.github/workflows/maven-central-release.yml
+++ b/.github/workflows/maven-central-release.yml
@@ -8,10 +8,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      
+      - name: Set up Java      
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'corretto'
+          cache: 'maven'
+          server-id: central
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+          gpg-private-key: ${{ secrets.GPG_SECRET_KEY }}
+          gpg-passphrase: MAVEN_GPG_PASSPHRASE   
+          
+      - name: Build and Test
+        run: mvn clean verify          
+        
       - name: Publish to Maven Central
         run: mvn -ntp clean deploy -Prelease,javadoc
         env:
