--- a/spring-ai-bedrock-agentcore-starter/pom.xml
+++ b/spring-ai-bedrock-agentcore-starter/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springaicommunity</groupId>
         <artifactId>spring-ai-bedrock-agentcore-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0-RC1</version>
     </parent>
 
     <artifactId>spring-ai-bedrock-agentcore-starter</artifactId>
