--- a/examples/spring-ai-simple-chat-client/pom.xml
+++ b/examples/spring-ai-simple-chat-client/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.unicorn</groupId>
-	<artifactId>sse-agents</artifactId>
+	<artifactId>agents</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<name>sse-agents</name>
-	<description>SSE Streaming Bedrock Chat Client for Spring AI</description>
+	<name>agents</name>
+	<description>Simple Bedrock Chat Client for Spring AI</description>
 	<properties>
 		<java.version>21</java.version>
 		<spring-ai.version>1.0.0</spring-ai.version>
@@ -34,9 +34,10 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
