initial short-term memory

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <url>https://github.com/spring-ai-community/spring-ai-bedrock-agentcore</url>
     <modules>
         <module>spring-ai-bedrock-agentcore-starter</module>
+        <module>spring-ai-starter-model-chat-memory-repository-bedrock-agentcore</module>
     </modules>
 
     <scm>
@@ -75,7 +76,10 @@
         <maven-site-plugin.version>4.0.0-M13</maven-site-plugin.version>
         <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
         <spring-javaformat-maven-plugin.version>0.0.43</spring-javaformat-maven-plugin.version>
+        <spring-ai.version>1.1.1</spring-ai.version>
+        <awssdk.version>2.40.3</awssdk.version>
     </properties>
+
 
     <dependencyManagement>
         <dependencies>
@@ -83,6 +87,20 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.ai</groupId>
+                <artifactId>spring-ai-bom</artifactId>
+                <version>${spring-ai.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>software.amazon.awssdk</groupId>
+                <artifactId>bom</artifactId>
+                <version>${awssdk.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
