--- a/spring-ai-starter-model-chat-memory-repository-bedrock-agentcore/pom.xml
+++ b/spring-ai-starter-model-chat-memory-repository-bedrock-agentcore/pom.xml
@@ -113,6 +113,11 @@
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-starter-model-bedrock-converse</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
