--- a/spring-ai-memory-bedrock-agentcore/pom.xml
+++ b/spring-ai-memory-bedrock-agentcore/pom.xml
@@ -17,10 +17,10 @@
         <developerConnection>git@github.com/spring-ai-community/spring-ai-bedrock-agentcore.git</developerConnection>
     </scm>
 
-    <artifactId>spring-ai-model-chat-memory-repository-bedrock-agentcore</artifactId>
+    <artifactId>spring-ai-memory-bedrock-agentcore</artifactId>
     <packaging>jar</packaging>
 
-    <name>Spring AI Starter Chat Memory Bedrock AgentCore</name>
+    <name>Spring AI Chat Memory Repository Bedrock AgentCore</name>
     <description>Starter for Spring AI AgentCore Memory</description>
 
     <organization>
