--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.springaicommunity</groupId>
     <artifactId>spring-ai-bedrock-agentcore-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-RC2</version>
 
     <packaging>pom</packaging>
     <url>https://github.com/spring-ai-community/spring-ai-bedrock-agentcore</url>
