--- a/spring-ai-memory-bedrock-agentcore/pom.xml
+++ b/spring-ai-memory-bedrock-agentcore/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springaicommunity</groupId>
         <artifactId>spring-ai-bedrock-agentcore-parent</artifactId>
-        <version>1.0.0-RC2</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <url>https://github.com/spring-ai-community/spring-ai-bedrock-agentcore</url>
